[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scene/Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Object/enemy/Enemy.gd" type="Script" id=4]
[ext_resource path="res://assets/scene/enemy/main_system/WanderControl.tscn" type="PackedScene" id=12]

[node name="Enemy" type="KinematicBody2D"]
z_index = 3
collision_layer = 16
collision_mask = 33
script = ExtResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 1 )]
maxhp = 12.0
attack = 3.0
max_speed = 70.0
speed = 30.0
attack_speed = 4.0
knockback = 200
delay_attack = 0.2

[node name="WanderControl" parent="." instance=ExtResource( 12 )]
wander_range = 32

[node name="ValidAttack" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.152941, 0.109804, 0.894118, 1 )
rotation = 1.5708

[node name="Out" type="Position2D" parent="."]

[node name="OutBullet" type="Position2D" parent="Out"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="ValidAttack" to="." method="_on_ValidAttack_timeout"]
